<resources>
    <string name="app_name">Gizo tracking</string>
    <string name="link_login"><u>Login</u></string>
    <string name="link_register"><u>Register</u></string>
    <string name="link_recover_password"><u>Recover password</u></string>
    <string name="login_page_title">Login</string>
    <string name="recover_password_page_title">Recover password</string>
    <string name="register_page_title">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="or">Or</string>
    <string name="recover_password">Recover password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email_error_message">Enter valid email</string>
    <string name="password_error_message">Password length must be 8</string>
    <string name="enter_registered_email_id">Enter registered email id</string>
    <string name="enter_registered_phone_no">Enter registered phone no.</string>
    <string name="phone_error_message">Enter valid phone number of 10 digits</string>
    <string name="recover_password_error_message">Enter email or phone to recover password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="password_and_confirm_password_must_match">Password &amp; confirm password must match</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="enter_valid_phone">Enter valid phone no.</string>
    <string name="code_verification">Code verification</string>
    <string name="code_verification_message">We have sent you a mail/sms with verifaction code. Please enter verification code here to finish the process</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="finish">Finish</string>
    <string name="resend_code">Resend code</string>

    <string name="wait_checking_network_connection">Wait ! checking network connection</string>
    <string name="network_not_reachable">Network not reachable ! please check your network connection</string>
    <string name="wait_communicating_with_server">Wait ! communicating with server</string>
    <string name="async_title">Processing</string>
    <string name="info_dialog_title">Info</string>
    <string name="error_dialog_title">Error</string>
    <string name="only_parent_can_access_this_app">Only parents can use this app to track their wards</string>
    <string name="password_emailed_smsed_to_your_registered_email_phone">We have mailed/smsed to your registered email/phone.</string>
    <string name="no_account_detail_found">No Account detail found</string>

    <string name="title_activity_maps">Map Activity</string>
    <string name="title_activity_map">Map</string>
    <string name="no_student_found">No student found</string>

    <!-- GCM-->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">GCM: device successfully registered!</string>
    <string name="gcm_unregistered">GCM: device successfully unregistered!</string>
    <string name="gcm_message">GCM: you got message!</string>
    <string name="gcm_error">GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on  Server.</string>
    <string name="server_registered">Server: successfully added device!</string>
    <string name="server_unregistered">Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on  Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on  Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="no_data_found">No data found</string>

</resources>
