<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/scrollBarStyle"
    tools:context="com.mbcsonline.sss.RecoverPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <TextView
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password_page_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recoverPassword_TilEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/hintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recoverPassword_TietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_registered_email_id"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recoverPassword_TilPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/hintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recoverPassword_TietPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_registered_phone_no"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/recoverPassword_BtnRecoverPasswrdOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:drawableRight="@drawable/ic_check_circle_black_24dp"
            android:onClick="recoverPassword_ClickHandler"
            android:layout_margin="10dp"
            android:text="@string/recover_password"
            android:theme="@style/buttonStyle"

            />

        <TextView
            android:id="@+id/recoverPassword_TvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_login"
            android:theme="@style/linkStyle"
            android:onClick="recoverPassword_ClickHandler"
            />
        <TextView
            android:id="@+id/recoverPassword_TvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_register"
            android:theme="@style/linkStyle"
            android:onClick="recoverPassword_ClickHandler"
            />


    </LinearLayout>

</ScrollView>
