<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/scrollBarStyle"
    tools:context="com.mbcsonline.sss.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <TextView
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_page_title" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_TilEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/hintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_TietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_TilPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:hintTextAppearance="@style/hintStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_TietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="8" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:id="@+id/register_TilConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:hintTextAppearance="@style/hintStyle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_TietConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="8" />
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_TilNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:hintTextAppearance="@style/hintStyle"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_TietName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="50"  />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/register_TilPhoneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/hintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_TietPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/register_BtnRegisterOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:drawableRight="@drawable/ic_check_circle_black_24dp"
            android:onClick="register_ClickHandler"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:theme="@style/buttonStyle"

            />

        <TextView
            android:id="@+id/register_TvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_login"
            android:theme="@style/linkStyle"
            android:onClick="register_ClickHandler"
            />
        <TextView
            android:id="@+id/register_TvRecoverPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_recover_password"
            android:theme="@style/linkStyle"
            android:onClick="register_ClickHandler"
            />

    </LinearLayout>

</ScrollView>
