<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/scrollBarStyle"
    tools:context="com.mbcsonline.sss.LoginActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/pageTitle"
            android:text="@string/login_page_title"

            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_TilEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:hintTextAppearance="@style/hintStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_TietEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_box_black_24dp"

                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_TilPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:hintTextAppearance="@style/hintStyle"
            app:passwordToggleEnabled="true"

            app:passwordToggleTint="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_TietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="8" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_BtnLoginOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:drawableRight="@drawable/ic_check_circle_black_24dp"
            android:onClick="login_ClickHandler"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:theme="@style/buttonStyle"

            />

            <TextView
                android:id="@+id/login_TvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_register"
                android:theme="@style/linkStyle"
                android:onClick="login_ClickHandler"
                />
            <TextView
                android:id="@+id/login_TvRecoverPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_recover_password"
                android:theme="@style/linkStyle"
                android:onClick="login_ClickHandler"
                />

    </LinearLayout>

</ScrollView>
