<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/scrollBarStyle"
    tools:context=".CodeValidatorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_corner"
        android:orientation="vertical">

        <TextView
            style="@style/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_verification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_verification_message"

            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/codeValidator_TilVerificationCodeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/hintStyle"
            app:counterEnabled="true"
            app:counterMaxLength="4"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/codeValidator_TietVerificationCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_verification_code"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/codeValidator_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawableRight="@drawable/ic_check_circle_black_24dp"
                android:onClick="codeValidator_ClickHandler"
                android:layout_margin="10dp"
                android:text="@string/finish"
                android:theme="@style/buttonStyle" />

            <Button
                android:id="@+id/codeValidator_BtnResendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawableRight="@drawable/ic_check_circle_black_24dp"
                android:onClick="codeValidator_ClickHandler"
                android:layout_margin="10dp"
                android:text="@string/resend_code"
                android:theme="@style/buttonStyle"

                />

        </LinearLayout>
    </LinearLayout>




</ScrollView>
